# slyp

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  bump-version.py  changelog.rst  docs-requirements.txt  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  publish.yaml  publish_testpypi.yaml
docs/: changelog.rst  conf.py  fixer_rules.rst  index.rst  linter_rules.rst  usage.rst
scripts/: bump-version.py  update-generated-reference.py
src/slyp/: __init__.py  __main__.py  cli.py  codes.py  driver.py  file_cache.py  hashable_file.py  result.py
src/slyp/checkers/: __init__.py
src/slyp/checkers/abstract/: __init__.py  _base.py  matching_branches.py  none_checked_var_returned.py
src/slyp/checkers/concrete/: __init__.py  _base.py  annotation_wrap.py  str_concat.py
src/slyp/fixer/: __init__.py  transformer.py
src/slyp/fixers/: __init__.py  unnecessary_parens.py
tests/: conftest.py  test_check_files.py  test_fix_files.py  test_reference_generation.py  test_result_caching.py
tests/checkers/: test_basics.py  test_matching_ast.py  test_str_concat.py
tests/fixers/: conftest.py  test_collection_builtin_call.py  test_fix_none_checked_var_return.py  test_fix_special_functions.py  test_insert_parens.py  test_string_concat.py  test_unnecessary_parens.py
